repair gap

--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,12 @@ img {
 video {
     width: 100%;
 }
+
+body {
+	margin: 0;
+	padding: 0;
+}
+
+.middle {
+	font-size: 0;
+}
